--- a/src/plugins/kanbot/admin/src/pages/ConservationEditor/style.css
+++ b/src/plugins/kanbot/admin/src/pages/ConservationEditor/style.css
@@ -168,6 +168,7 @@ button#onboarding {
     overflow: hidden;
     padding: 5px;
     padding-bottom: 15px;
+    z-index: 99;
 }
 
 .react-flow__nodes .selected > div {
@@ -392,7 +393,12 @@ button#onboarding {
     height: 100vh;
     width: 480px;
     max-width: 100%;
-    z-index: 1;
+    z-index: 5;
+}
+
+div[data-react-portal="true"] {
+    z-index: 8;
+    position: fixed;
 }
 
 .x_create_node{
@@ -422,13 +428,6 @@ button#onboarding {
 .x_node_accordion{
     position: relative;
     z-index: 1;
-}
-
-div[data-strapi-expanded="true"] {
-    border: unset !important;
-    border-radius: 0.35rem;
-    box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
-    overflow: hidden;
 }
 
 .x_conservation_editor_board {
