--- a/src/plugins/kanbot/admin/src/pages/style.css
+++ b/src/plugins/kanbot/admin/src/pages/style.css
@@ -10,3 +10,39 @@
     z-index: 9999;
     background: white;
 }
+
+.hightlightTxt:nth-child(1){
+    background: #74b9ff;
+}
+
+.hightlightTxt:nth-child(2){
+    background: #a29bfe;
+}
+
+.hightlightTxt:nth-child(3){
+    background: #fd79a8;
+}
+
+.hightlightTxt:nth-child(4){
+    background: #ffeaa7;
+}
+
+.hightlightTxt:nth-child(5){
+    background: #fdcb6e;
+}
+
+.hightlightTxt:nth-child(6){
+    background: #b2bec3;
+}
+
+.hightlightTxt:nth-child(7){
+    background: #0984e3;
+}
+
+.hightlightTxt:nth-child(8){
+    background: #6c5ce7;
+}
+
+.hightlightTxt:nth-child(9){
+    background: #00cec9;
+}
